--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -129,6 +129,19 @@
     border-radius: 50%;
     display: inline-block;
   }
+  .number-label {
+    height: 27px;
+    width: 32px;
+    background-color: #1D70B8;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size:19px;
+    margin: 10px 8px;
+    text-align: center;
+    border-radius: 45%;
+    display: inline-block;
+  }
+  
   .tfm {
     font-family: Helvetica;
   }
