--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -184,6 +184,7 @@
     border-top-style: solid;
     margin-top: 30px;
   }
+
   .deal table{
     text-align: left;
     margin-bottom:50px;
@@ -250,6 +251,22 @@
     border-bottom: thin solid;
     border-top: thin solid;
     border-color: lightgray;
+  }
+
+  .credit-analysis h1 {
+    color:gray;
+  }
+  .credit-analysis-item {
+      border-bottom-style: inset;
+      border-bottom-width: 1px;
+      border-bottom-color: lightgray;
+      min-height: 36px;
+      padding-top: 10px;
+      margin: 0;
+  }
+
+  .credit-analysis-topic {
+    border-top-style: solid;
   }
 
 @mixin label ($label-background: #DEE0E2, $label-border: #CBCBCB, $label-text: #0B0C0C) {
