--- a/app/views/includes/primary-navigation.html
+++ b/app/views/includes/primary-navigation.html
@@ -4,17 +4,17 @@
 label: 'Primary navigation',
 items: [
 {
-  text: 'Inbox',
+  text: 'New',
   href: '/inbox',
   active: primary == 'inbox'
 },
 {
-  text: 'Cases',
+  text: 'In progress',
   href: '/cases',
   active: primary == 'cases'
 },
 {
-  text: 'Deals',
+  text: 'Completed',
   href: '/deals',
   active: primary == 'deals'
 },
