--- a/app/views/cases/credit-analysis/export.html
+++ b/app/views/cases/credit-analysis/export.html
@@ -1,93 +1,81 @@
 {% extends "layout.html" %}
-{%- from "govuk/components/textarea/macro.njk" import govukTextarea -%}
- {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
 {% block beforeContent %}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-full">
-{{ govukBreadcrumbs({
-  items: [
-    {
-      text: "C0345",
-      href: "/cases/tasks"
-    },
-    {
-      text: "credit analysis",
-      href: "/cases/credit-analysis"
-    },
-    {
-      text: "export"
-    }
-  ]
-}) }}
-</div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    {{ govukBreadcrumbs({
+      items: [
+        {
+          text: "C0345",
+          href: "/cases/tasks"
+        },
+        {
+          text: "credit analysis",
+          href: "/cases/credit-analysis"
+        },
+        {
+          text: "export"
+        }
+      ]
+    }) }}
+  </div>
 </div>
 {% endblock %}
 {% block content %}
 <form action="/cases/credit-analysis" method="post">
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
 
-            <h1 class="govuk-heading-xl">About the export</h1>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">About the export</h1>
+      {{ govukTextarea({
+        name: "credit-analysis-contract",
+        id: "credit-analysis-contract",
+        label: {
+          text: "Describe the contract between the exporter and the buyer",
+          classes: "govuk-label",
+          isPageHeading: true
+      },
+      value: data['credit-analysis-contract']
+      }) }}
+      {{ govukTextarea({
+        name: "credit-analysis-payment-terms",
+        id: "credit-analysis-payment-terms",
+        label: {
+          text: "Enter payment terms and milestones",
+          classes: "govuk-label",
+          isPageHeading: true
+      },
+      value: data['credit-analysis-payment-terms']
+      }) }}
+      {{ govukTextarea({
+        name: "credit-analysis-ability-to-pay",
+        id: "credit-analysis-ability-to-pay",
+        label: {
+          text: "Enter the buyer's ability to pay",
+          classes: "govuk-label",
+          isPageHeading: false
+      },
+          value: data['credit-analysis-ability-to-pay']
+      }) }}
 
-            {{ govukTextarea({
-            name: "more-detail",
-            id: "more-detail",
-            label: {
-                text: "Describe the contract between the exporter and the buyer",
-                classes: "govuk-label",
-                isPageHeading: false,
-                value: "{{ data['credit-analysis-contract'] }}"
-            }
-            }) }}
-            {{ govukTextarea({
-            name: "more-detail",
-            id: "more-detail",
-            label: {
-                text: "Enter payment terms and milestones",
-                classes: "govuk-label",
-                isPageHeading: true
-            }
-            }) }}
-            {{ govukTextarea({
-            name: "more-detail",
-            id: "more-detail",
-            label: {
-                text: "Enter the buyer's ability to pay",
-                classes: "govuk-label",
-                isPageHeading: false
-            }
-            }) }}
-      
-            {{ govukTextarea({
-            name: "more-detail",
-            id: "more-detail",
-            label: {
-                text: "Enter the exporter's ability to perform as a business",
-                classes: "govuk-label",
-                isPageHeading: false
-            }
-            }) }}
-        </div>
+      {{ govukTextarea({
+        name: "credit-analysis-ability-to-perform",
+        id: "credit-analysis-ability-to-perform",
+        label: {
+          text: "Enter the exporter's ability to perform as a business",
+          classes: "govuk-label",
+          isPageHeading: false
+      },
+          value: data['credit-analysis-ability-to-perform']
+      }) }}
     </div>
-        <div class="govuk-grid-row">
-        <div class="govuk-grid-column-three-quarters">
-{% from "moj/components/button-menu/macro.njk" import mojButtonMenu %}
-
-{{ mojButtonMenu({
-items: [{
-text: "Save and back to credit analysis",
-href: "/cases/credit-analysis"
-}, {
-text: "Continue to bank relationship",
-href: "/cases/credit-analysis/bank-relationship",
-classes: "govuk-button--secondary"
-}, {
-text: "Cancel",
-href: "/cases/credit-analysis",
-classes: "govuk-link"
-}]
-}) }} 
-        </div></div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-three-quarters tfm flex-container">
+      <button class="govuk-button">Save and back to credit analysis</button>
+      <button class="govuk-button govuk-button--secondary" formaction="/cases/credit-analysis/bank-relationship">Continue to bank relationship</button>
+      <a href="/cases/credit-analysis"class="cancel-link">Cancel</a>
+    </div>
+  </div>
 </form>
 {% endblock %}
