DTFS2-1898: Interest margin - Question size needs increasing to be an h1 (xl) and can we put the '%' at the end instead of the beginning?

--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -265,6 +265,24 @@
       margin: 0;
   }
 
+
+  .percentage-field {
+        font-family: "Helvetica", Arial, sans-serif;
+    /* -webkit-font-smoothing: antialiased; */
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: 400;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.25;
+    background-color: #f3f2f1;
+    /* position: absolute; */
+    /* margin: 2px 0 0 2px !important; */
+    padding: 5.5px 12px;
+    border-right: 2px solid #0b0c0c;
+    border-top: 2px solid #0b0c0c;
+    border-bottom: 2px solid #0b0c0c;
+  }
+
   .credit-analysis-topic {
     border-top-style: solid;
   }
