loss given default

--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -26,10 +26,16 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <div class="govuk-form-group tfm">
-        <h1>What is the loss given default?</h1>
-        <span class="moj-label__currency">%</span>
-        <input class="govuk-input moj-input__currency govuk-input--width-5" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="text" autocomplete="off" pattern="[0-9]*" >
-        </input>
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+          <h1 class="govuk-fieldset__heading">
+            What is the loss given default?
+          </h1>
+        </legend>
+        <div class="flex-container">
+          <input class="govuk-input govuk-input--width-2" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="text" autocomplete="off" pattern="[0-9]*" >
+          </input>
+              <span class="percentage-field">%</span>
+        </div>
       </div> 
     </div>
   </div>
