--- a/app/views/cases/pricing/interest-margin.html
+++ b/app/views/cases/pricing/interest-margin.html
@@ -31,7 +31,7 @@
           </h1>
         </legend>
         <div class="flex-container">
-              <input class="govuk-input govuk-input--width-2" value="{{ data['interest-margin-amount'] }}" id="interest-margin-amount" name="interest-margin-amount" type="text" autocomplete="off" pattern="[0-9]*" >
+              <input class="govuk-input govuk-input--width-2" value="{{ data['interest-margin-amount'] }}" id="interest-margin-amount" name="interest-margin-amount" type="number" step="any" autocomplete="off" >
               </input>
               <span class="percentage-field">%</span>
         </div>
