DTFS2-1892: Comments shouldn't be bold.

--- a/app/views/cases/pricing/index.html
+++ b/app/views/cases/pricing/index.html
@@ -79,7 +79,7 @@
           </tr>
           <tr>
             <td><a href="loss-given-default">0020010552</a></td>
-            <td>{{ data['loss-given-default'] }}</td>
+            <td>{{ data['loss-given-default'] }}%</td>
             <td/>
             <td/>
             <td/>
