--- a/app/views/cases/exposure/exposure-check.html
+++ b/app/views/cases/exposure/exposure-check.html
@@ -54,7 +54,7 @@
     <div class="govuk-grid-row tfm tfm-width">
       <div class="govuk-grid-column-one-half">
         <h1 class="govuk-label-wrapper">
-          <label class="govuk-label govuk-label--m" for="exposure-happy-comment">
+          <label class="govuk-label" for="exposure-happy-comment">
           Comments
           </label>
         </h1>
