DTFS2-1895: Exposure chart - field labels should be bold and the numbers should be left-aligned against the GBP

--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -86,7 +86,14 @@
     height:30px;
   }
   .exposure-summary td:nth-child(1),.exposure-summary th:nth-child(1) {
-   width: 250px;
+   width: 220px;
+   font-weight: bold;
+  }
+  .exposure-summary td:nth-child(2),.exposure-summary th:nth-child(2) {
+   width: 20px;
+  }
+    .exposure-summary td:nth-child(3),.exposure-summary th:nth-child(3) {
+   width: 40px;
   }
  .exposure-summary td:nth-child(4),.exposure-summary th:nth-child(4) {
     text-align:right;
