--- a/app/views/cases/case.html
+++ b/app/views/cases/case.html
@@ -20,7 +20,7 @@
         <tr>
           <td>Type of work</td>
           <td>
-            <span class="label--graygreen">Manual Inclusion Application</span>
+            <span class="label--graygreen">Manual inclusion application</span>
           </td>
           <td>Date received</td>
           <td>16 Dec 2019</td>
@@ -68,7 +68,7 @@
   href: 'tasks',
   active: selected=='tasks'
   }, {
-  text: 'Deals',
+  text: 'Applications',
   href: 'deals',
   active: selected=='deals'
   }, {
@@ -84,11 +84,11 @@
   href: 'agent',
   active: selected=='agent'
   }, {
-  text: 'Adverse History',
+  text: 'Adverse history',
   href: 'adverse-history',
   active: selected=='adverse-history'
   }, {
-  text: 'Credit Analysis',
+  text: 'Credit analysis',
   href: 'credit-analysis',
   active: selected=='credit-analysis'
   }]
