--- a/app/views/cases/deals/index.html
+++ b/app/views/cases/deals/index.html
@@ -3,7 +3,7 @@
 {% block sub_content %}
   <div class="govuk-grid-row tfm tfm-width">
       <div class="govuk-grid-column-three-quarters">
-      <p class="header-label">Deals</p>
+      <p class="header-label">Applications</p>
       </div>
   </div>
   <div class="govuk-grid-row tfm tfm-width">
