--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -39,7 +39,7 @@
 
       <table>
         <tr>
-          <th colspan="3" style="text-align:left"><h2>UKEF Exposure</h2></td>
+          <th colspan="3" style="text-align:left"><h2>UKEF exposure</h2></td>
         </tr>
         <tr>
           <td>Exporter's limit</td>
@@ -126,17 +126,17 @@
   </div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
    <div class="govuk-grid-column-full separator-line" style="margin-left:10px">
-      <h2>New guarantee request</h2>
+      <h2>New guarantee requests</h2>
       <table>
         <tr>
           <th>Facility ID</th>
           <th>Type</th>
           <th>Status</th>
-          <th>Expected Issue date</th>
+          <th>Expected issue date</th>
           <th>Tenor</th>
           <th>Expected expiry date</th>
-          <th>Value(GBP)</th>
-          <th>Value(Currency)</th>
+          <th>Value (GBP)</th>
+          <th>Value (currency)</th>
           <th>Exposure</th>
           <th>Expected loss</th>
         </tr>
@@ -169,17 +169,17 @@
 </div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
    <div class="govuk-grid-column-full separator-line">
-      <h2>Existing guarantees UKEF has committed to</h2>
+      <h2>Existing UKEF guarantees</h2>
       <table>
         <tr>
           <th>Facility ID</th>
           <th>Type</th>
           <th>Status</th>
-          <th>Expected Issue date</th>
+          <th>Expected issue date</th>
           <th>Tenor</th>
           <th>Expected expiry date</th>
-          <th>Value(GBP)</th>
-          <th>Value(Currency)</th>
+          <th>Value (GBP)</th>
+          <th>Value (currency)</th>
           <th>Exposure</th>
           <th>Expected loss</th>
         </tr>
