--- a/app/views/inbox/index.html
+++ b/app/views/inbox/index.html
@@ -5,7 +5,7 @@
 {% set primary = 'inbox' %}
 <div class="govuk-grid-row tfm tfm-width">
     <div class="govuk-grid-column-full">
-      <p class="header-label">Inbox</p>
+      <p class="header-label">New</p>
       <nav class="moj-sub-navigation" aria-label="Sub navigation">
         <ul class="moj-sub-navigation__list" style="display: flex">
           <li class="moj-sub-navigation__item" style="display: flex">
@@ -13,7 +13,7 @@
           </li>
 
           <li class="moj-sub-navigation__item" style="display: flex">
-            <a class="moj-sub-navigation__link" href="#2">Amendmend requests</a><span class="number-label">1</span>
+            <a class="moj-sub-navigation__link" href="#2">Amendment requests</a><span class="number-label">1</span>
           </li>
         </ul>
       </nav> 
