small fixes on credit analysis

--- a/app/views/cases/credit-analysis/index.html
+++ b/app/views/cases/credit-analysis/index.html
@@ -122,7 +122,7 @@
           <a href="credit-analysis/bank-relationship">Enter the exporter`s relationship with the bank</a>
         </div>
         <div id="existing-facilities" class="credit-analysis-item">
-          <a href="credit-analysis/existing-facility">Enter the exporter`s exsting facilities with banks and other organisations</a>
+          <a href="credit-analysis/existing-facility">Enter the exporter`s existing facilities with banks and other organisations</a>
         </div>
       </div>
       <h1>Business risk</h1>
@@ -131,7 +131,7 @@
           <a href="credit-analysis/company-background">Enter company background</a>
         </div>
         <div class="credit-analysis-item">
-          <a href="credit-analysis/business-risk-factors">credit-analysis/company-background</a>
+          <a href="credit-analysis/business-risk-factors">Enter business risk factors</a>
         </div>
       </div>
       <h1>Financial risk</h1>
@@ -140,16 +140,16 @@
           <a href="Add company accounts">Add company accounts</a>
         </div>
         <div class="credit-analysis-item">
-          <a href="credit-analysis/financial-year">Enter financial this credit analysis is based on</a>
+          <a href="credit-analysis/financial-year">Enter financial year this credit analysis is based on</a>
         </div>
         <div class="credit-analysis-item">
           <a href="credit-analysis/ebitda">Enter information about the EBITDA levels</a>
         </div>
         <div class="credit-analysis-item">
-          <a href="credit-analysis/cash-balance">Enter information abouth the cash balance</a>
+          <a href="credit-analysis/cash-balance">Enter information about the cash balance</a>
         </div>
         <div class="credit-analysis-item">
-          <a href="credit-analysis/debts">credit-analysis/cash-balance</a>
+          <a href="credit-analysis/debts">Enter debts</a>
         </div>
         <div class="credit-analysis-item">
           <a href="credit-analysis/forecast">Enter information about the forecast</a>
