--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -32,7 +32,7 @@
           </h1>
         </legend>
         <div class="flex-container">
-          <input class="govuk-input govuk-input--width-2" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="text" autocomplete="off" pattern="[0-9]*" >
+          <input class="govuk-input govuk-input--width-2" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="number" step="any" autocomplete="off" pattern="[0-9]*" >
           </input>
               <span class="percentage-field">%</span>
         </div>
