--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -232,11 +232,13 @@
     text-align: left;
     margin-bottom:50px;
     cellspacing: 0;
+    font-size: 19px;
     border-collapse:collapse;
 
   }
     .pricing td:nth-child(1), .pricing th:nth-child(1) {
     width:120px;
+    font-weight: bold;
   }
     .pricing td:nth-child(2), .pricing th:nth-child(2) {
     width:150px;
@@ -258,6 +260,10 @@
     border-bottom: thin solid;
     border-top: thin solid;
     border-color: lightgray;
+  }
+
+  .pricing a {
+    font-weight: normal;
   }
 
   .credit-analysis h1 {
