--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -3,125 +3,125 @@
 {% extends "cases/case.html" %}
 {% set selected = 'exposure' %}
 {% block sub_content %}
-  <div class="govuk-grid-row tfm tfm-width">
-    <div class="govuk-grid-column-three-quarters">
-      <p class="header-label">Exposure</p>
-    </div>
-  </div>
-  <div class="govuk-grid-row tfm tfm-width">
-  <div class="govuk-grid-column-three-quarters separator-line moj-task-list__items">
-        <h2>Exposure check</h2>
-            {% if data['exposure-happy'] %}
-              <table>
-                <tr>
-                  <td class="moj-class-list__item" style="width:200px;font-weight:bold;">Level of exposure is</td>
-                  <td class="moj-class-list__item">{% if data['exposure-happy'] == 'yes' %}<span class="label--green">GOOD</span>{% else %} <span class="label--red">BAD</span> {% endif %}<td/>
-                  <td/>
-                  <td style="width:80px"><a href="/cases/exposure/exposure-check">Change</a></td>
-                </tr>
-              </table>
-              <p>
-                {{ data['exposure-happy-comment']}}
-              </p>
-            {% else %}
-              <table>
-                <tr>
-                  <td colspan="2" class="moj-class-list__item" style="font-size:24px;width:800px;"><a href="/cases/exposure/exposure-check">Are you satisfied with the level of exposure this case will add?</a></td>
-                  <td style="width:80px"><span class="label--blue">TO DO</span></td>
-                </tr>
-              </table>
-            {% endif %}
-      </div>
-  </div>
-<div class="govuk-grid-row tfm tfm-width exposure-summary ">
-    <div class="govuk-grid-column-one-third separator-line">
+<script type = "text/javascript" src = "https://www.gstatic.com/charts/loader.js"></script>
+<script type = "text/javascript">
+    google.charts.load('current', {packages: ['corechart']});     
+</script>
+<script language = "JavaScript">
+  function drawChart() {
+    // Define the chart to be drawn.
+    var data = new google.visualization.DataTable();
+    data.addColumn('string', 'Browser');
+    data.addColumn('number', 'Percentage');
+    data.addRows([
+        ['Issued guarantees', 394870.38],
+        ['Committed guarantees', 5714285.71],
+        ['Other applications', 0],
+        ['This application', 3468195.18],
+        ['Remaining headroom', 422648.73]
+    ]);
+        
+    // Set chart options
+    var options = {
+      //  'title':'UKEF exposure',
+        'colors': ['#1D70B8', '#F47738', '#912B88', '#28A197', '#F3F2F1'],
+        tooltip: { textStyle: { fontName: 'Helvetica', fontSize: 16 }, text: 'value' }, 
+        'width':250,
+        'height':250,
+        chartArea:{left:0,top:50,width:"100%",height:"100%"},
+        pieHole: 0.4,
+        legend: 'none',
+        pieSliceText: 'none',
 
+    };
 
+    // Instantiate and draw the chart.
+    var chart = new google.visualization.PieChart(document.getElementById('container'));
+    chart.draw(data, options);
+  }
+  google.charts.setOnLoadCallback(drawChart);
+</script>
+<div class="govuk-grid-row tfm tfm-width">
+  <div class="govuk-grid-column-three-quarters">
+    <p class="header-label">Exposure</p>
+  </div>
+</div>
+<div class="govuk-grid-row tfm tfm-width ">
+  <div class="govuk-grid-column-two-thirds separator-line moj-task-list__items">
+    <h2>Exposure check</h2>
+    {% if data['exposure-happy'] %}
       <table>
         <tr>
-          <th colspan="3" style="text-align:left"><h2>UKEF exposure</h2></td>
-        </tr>
-        <tr>
-          <td>Exporter's limit</td>
+          <td class="moj-class-list__item" style="width:600px;font-weight:bold;">Level of exposure is</td>
+          <td class="moj-class-list__item" style="width:200px;">{% if data['exposure-happy'] == 'yes' %}<span class="label--green">ACCEPTABLE</span>{% else %} <span class="label--red">NOT ACCEPTABLE</span> {% endif %}<td/>
           <td/>
-          <td>GBP</td>
-          <td>10,000,000.00</td>
-        </tr>
-        <tr>
-          <td>Issued guarantees</td>
-          <td><span class="dot" style="background-color: #1D70B8"/></td>
-          <td>GBP</td>
-          <td>394,870.38</td>
-        </tr>
-        <tr>
-          <td>Committed guarantees</td>
-          <td><span class="dot" style="background-color: #F47738"/></td>
-          <td>GBP</td>
-          <td>5,714,285.71</td>
-        </tr>
-        <tr>
-          <td>Other applications</td>
-          <td><span class="dot" style="background-color: #912B88"/></td>
-          <td>GBP</td>
-          <td>0</td>
-        </tr>
-        <tr>
-          <td>This application</td>
-          <td><span class="dot" style="background-color: #28A197"/></td>
-          <td>GBP</td>
-          <td>3,468,195.18</td>
-        </tr>
-        <tr>
-          <td>Remaining headroom</td>
-          <td><span class="dot" style="background-color: #F3F2F1"/></td>
-          <td>GBP</td>
-          <td>422,648.73</td>
+          <td style="width:80px"><a href="/cases/exposure/exposure-check">Change</a></td>
         </tr>
       </table>
-    </div>
-    <div class="govuk-grid-column-one-quarter separator-line">
-      <div id = "container" style = "width: 200px; height: 200px; margin: 0 auto; align:left;"></div>
-    <script type = "text/javascript" src = "https://www.gstatic.com/charts/loader.js">
-      </script>
-      <script type = "text/javascript">
-         google.charts.load('current', {packages: ['corechart']});     
-      </script>
-      <script language = "JavaScript">
-         function drawChart() {
-            // Define the chart to be drawn.
-            var data = new google.visualization.DataTable();
-            data.addColumn('string', 'Browser');
-            data.addColumn('number', 'Percentage');
-            data.addRows([
-               ['Issued guarantees', 394870.38],
-               ['Committed guarantees', 5714285.71],
-               ['Other applications', 0],
-               ['This application', 3468195.18],
-               ['Remaining headroom', 422648.73]
-            ]);
-               
-            // Set chart options
-            var options = {
-             //  'title':'UKEF exposure',
-               'colors': ['#1D70B8', '#F47738', '#912B88', '#28A197', '#F3F2F1'],
-               tooltip: { textStyle: { fontName: 'Helvetica', fontSize: 16 }, text: 'value' }, 
-               'width':250,
-               'height':250,
-               chartArea:{left:0,top:50,width:"100%",height:"100%"},
-               pieHole: 0.4,
-               legend: 'none',
-               pieSliceText: 'none',
-
-            };
-
-            // Instantiate and draw the chart.
-            var chart = new google.visualization.PieChart(document.getElementById('container'));
-            chart.draw(data, options);
-         }
-         google.charts.setOnLoadCallback(drawChart);
-      </script>
-    </div>
-    <div class="govuk-grid-column-one-quarter separator-line"/>
+      <p>
+        {{ data['exposure-happy-comment']}}
+      </p>
+    {% else %}
+      <table>
+        <tr>
+          <td colspan="2" class="moj-class-list__item" style="font-size:24px;width:800px;"><a href="/cases/exposure/exposure-check">Are you satisfied with the level of exposure this case will add?</a></td>
+          <td style="width:80px"><span class="label--blue">TO DO</span></td>
+        </tr>
+      </table>
+    {% endif %}
+  </div>
+</div>
+<div class="govuk-grid-row tfm tfm-width exposure-summary ">
+  <div class="govuk-grid-column-one-third separator-line">
+    <table>
+      <tr>
+        <th colspan="3" style="text-align:left"><h2>UKEF exposure</h2></td>
+      </tr>
+      <tr>
+        <td>Exporter's limit</td>
+        <td/>
+        <td>GBP</td>
+        <td>10,000,000.00</td>
+      </tr>
+      <tr>
+        <td>Issued guarantees</td>
+        <td><span class="dot" style="background-color: #1D70B8"/></td>
+        <td>GBP</td>
+        <td>394,870.38</td>
+      </tr>
+      <tr>
+        <td>Committed guarantees</td>
+        <td><span class="dot" style="background-color: #F47738"/></td>
+        <td>GBP</td>
+        <td>5,714,285.71</td>
+      </tr>
+      <tr>
+        <td>Other applications</td>
+        <td><span class="dot" style="background-color: #912B88"/></td>
+        <td>GBP</td>
+        <td>0</td>
+      </tr>
+      <tr>
+        <td>This application</td>
+        <td><span class="dot" style="background-color: #28A197"/></td>
+        <td>GBP</td>
+        <td>3,468,195.18</td>
+      </tr>
+      <tr>
+        <td>Remaining headroom</td>
+        <td><span class="dot" style="background-color: #F3F2F1"/></td>
+        <td>GBP</td>
+        <td>422,648.73</td>
+      </tr>
+    </table>
+  </div>
+    <div class="govuk-grid-column-one-third separator-line" style="padding-left:0">
+      <div class="govuk-grid-row">
+      <div class="govuk-grid-column-one-half" style="padding-left:0">
+        <div id = "container" style = "width: 200px; height: 200px; align:left;"></div>  
+      </div>
+    <div class="govuk-grid-column-one-half"/>
+   </div>
    </div>
   </div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
