--- a/app/views/cases/credit-analysis/add-a-debt.html
+++ b/app/views/cases/credit-analysis/add-a-debt.html
@@ -9,11 +9,11 @@
       href: "/cases/tasks"
     },
     {
-      text: "credit analysis",
+      text: "Credit analysis",
       href: "/cases/credit-analysis"
     },
     {
-      text: "add a debt"
+      text: "Add a debt"
     }
   ]
 }) }}
