--- a/app/views/cases/credit-analysis/approval.html
+++ b/app/views/cases/credit-analysis/approval.html
@@ -10,7 +10,7 @@
       href: "/cases/tasks"
     },
     {
-      text: "credit analysis",
+      text: "Credit analysis",
       href: "/cases/credit-analysis"
     },
     {
