--- a/app/views/cases/credit-analysis/export.html
+++ b/app/views/cases/credit-analysis/export.html
@@ -10,11 +10,11 @@
           href: "/cases/tasks"
         },
         {
-          text: "credit analysis",
+          text: "Credit analysis",
           href: "/cases/credit-analysis"
         },
         {
-          text: "export"
+          text: "About the export"
         }
       ]
     }) }}
