--- a/app/views/cases/pricing/interest-margin.html
+++ b/app/views/cases/pricing/interest-margin.html
@@ -10,10 +10,10 @@
     },
     {
       text: "pricing",
-      href: "/cases/pricing"
+      href: "/cases/Pricing"
     },
     {
-      text: "interest margin"
+      text: "Interest margin"
     }
   ]
 }) }}
