--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -10,11 +10,11 @@
         href: "/cases/tasks"
       },
       {
-        text: "pricing",
+        text: "Pricing",
         href: "/cases/pricing"
       },
       {
-        text: "loss given default"
+        text: "Loss given default"
       }
     ]
   }) }}
