--- a/app/views/cases/credit-analysis/bank-relationship.html
+++ b/app/views/cases/credit-analysis/bank-relationship.html
@@ -15,11 +15,11 @@
       href: "/cases/tasks"
     },
     {
-      text: "credit analysis",
+      text: "Credit analysis",
       href: "/cases/credit-analysis"
     },
     {
-      text: "bank relationship"
+      text: "Bank relationship"
     }
   ]
 }) }}
