--- a/app/views/cases/credit-analysis/cash-balance.html
+++ b/app/views/cases/credit-analysis/cash-balance.html
@@ -9,11 +9,11 @@
       href: "/cases/tasks"
     },
     {
-      text: "credit analysis",
+      text: "Credit analysis",
       href: "/cases/credit-analysis"
     },
     {
-      text: "cash balance"
+      text: "Cash balance"
     }
   ]
 }) }}
