--- a/app/views/cases/credit-analysis/company-accounts.html
+++ b/app/views/cases/credit-analysis/company-accounts.html
@@ -9,11 +9,11 @@
       href: "/cases/tasks"
     },
     {
-      text: "credit analysis",
+      text: "Credit analysis",
       href: "/cases/credit-analysis"
     },
     {
-      text: "company accounts"
+      text: "Company accounts"
     }
   ]
 }) }}
