--- a/app/views/cases/pricing/credit-rating.html
+++ b/app/views/cases/pricing/credit-rating.html
@@ -10,10 +10,10 @@
         },
         {
           text: "pricing",
-          href: "/cases/pricing"
+          href: "/cases/Pricing"
         },
         {
-          text: "credit rating"
+          text: "Credit rating"
         }
       ]
     }) }}
