--- a/app/views/cases/pricing/risk-profile.html
+++ b/app/views/cases/pricing/risk-profile.html
@@ -9,11 +9,11 @@
       href: "/cases/tasks"
     },
     {
-      text: "pricing",
+      text: "Pricing",
       href: "/cases/pricing"
     },
     {
-      text: "risk profile"
+      text: "Risk profile"
     }
   ]
 }) }}
@@ -33,7 +33,7 @@
             legend: {
             text: "What is the risk profile for the guarantee 0020010552?",
             isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
+            classes: "govuk-fieldset__legend--xl"
             }
         },
         items: [
