DTFS2-1894: Update styling of 'Type of work' tag to match design

--- a/app/views/cases/case.html
+++ b/app/views/cases/case.html
@@ -20,7 +20,10 @@
         <tr>
           <td>Type of work</td>
           <td>
-            <span class="label--graygreen">Manual inclusion application</span>
+            {{govukTag({
+          text: "Manual inclusion application",
+          classes: "govuk-tag--blue"
+        })}}
           </td>
           <td>Date received</td>
           <td>16 Dec 2019</td>
