--- a/app/views/cases/credit-analysis/index.html
+++ b/app/views/cases/credit-analysis/index.html
@@ -17,7 +17,7 @@
   </div>
   <div class="govuk-grid-row tfm tfm-width">
     <div class="govuk-grid-column-one-quarter tfm">
-
+  <div>
       {{ mojSideNavigation({
     label: 'Side navigation',
     sections: [
@@ -90,7 +90,7 @@
       }
     ]
   }) }}
-
+</div>
     </div>
 
     <div class="govuk-grid-column-three-quarters tfm credit-analysis">
