DTFS2-1896: Exposure - update table design to match designs

--- a/app/views/cases/exposure/index.html
+++ b/app/views/cases/exposure/index.html
@@ -1,5 +1,3 @@
-{%- from "moj/components/task-list/macro.njk" import mojTaskList -%}
-
 {% extends "cases/case.html" %}
 {% set selected = 'exposure' %}
 {% block sub_content %}
@@ -71,8 +69,8 @@
     {% endif %}
   </div>
 </div>
-<div class="govuk-grid-row tfm tfm-width exposure-summary ">
-  <div class="govuk-grid-column-one-third separator-line">
+<div class="govuk-grid-row tfm tfm-width ">
+  <div class="govuk-grid-column-one-third separator-line exposure-summary ">
     <table>
       <tr>
         <th colspan="3" style="text-align:left"><h2>UKEF exposure</h2></td>
@@ -115,17 +113,17 @@
       </tr>
     </table>
   </div>
-    <div class="govuk-grid-column-one-third separator-line" style="padding-left:0">
-      <div class="govuk-grid-row">
+  <div class="govuk-grid-column-one-third separator-line" style="padding-left:0">
+    <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-half" style="padding-left:0">
         <div id = "container" style = "width: 200px; height: 200px; align:left;"></div>  
       </div>
-    <div class="govuk-grid-column-one-half"/>
-   </div>
-   </div>
+      <div class="govuk-grid-column-one-half"/>
+    </div>
   </div>
+</div>
 <div class="govuk-grid-row case-exposure tfm tfm-width">
-   <div class="govuk-grid-column-full separator-line" style="margin-left:10px">
+  <div class="govuk-grid-column-full separator-line" style="margin-left:10px">
       <h2>New guarantee requests</h2>
       <table>
         <tr>
@@ -142,7 +140,7 @@
         </tr>
         <tr class= "table-line">
           <td colspan="10" >
-            <span class="label--graygreen" style="background-color:#F3F2F1; padding-left: 0"><a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence</span>
+            <span class="label--graygreen"><a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence</span>
           </td>
         </tr>
         <tr class= "table-line">
@@ -185,7 +183,7 @@
         </tr>
         <tr class= "table-line">
           <td colspan="10">
-            <span class="label--graygreen" style="background-color:#F3F2F1; padding-left: 0"><a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence</span>
+            <span class="label--graygreen"><a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence</span>
           </td>
         </tr>
         <tr class= "table-line">
@@ -202,7 +200,7 @@
         </tr>
         <tr class= "table-line">
           <td colspan="10">
-            <span class="label--graygreen" style="background-color:#F3F2F1; padding-left: 0"><a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence</span>
+            <span class="label--graygreen"><a href="#">0020010552</a> Provision of education services and material to Kingdom of Wakanda Colleges of Excellence</span>
           </td>
         </tr>
         <tr class= "table-line">
