--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -40,6 +40,17 @@
     cellspacing: 0;
     border-collapse:collapse;
   }
+
+  .case-exposure span {
+    background-color:#F3F2F1;
+    padding: 10px 10px;
+    height: 26px;
+    width: 100%;
+    margin-left: -10px;
+    margin-bottom: 12px;
+
+  }
+
   .case-exposure tr {
     height: 50px;
   }
@@ -50,8 +61,7 @@
   .case-exposure td, .case-exposure th {
      width:140px;
      text-align: left;
-     padding-top: 4px;
-     padding-bottom: 4px;
+     padding: 10px 0;
      vertical-align: top;
 }
 
