DTFS2-1981: Align header to rest of application (padding-left: 30px)

--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -423,6 +423,11 @@
   padding: 0 30px;
 }
 
+.moj-header__container {
+  max-width:1380px;
+  margin: 0 30px;
+}
+
 svg > g > g:last-child { pointer-events: none }
 </style>
 
