--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -6,6 +6,23 @@
 {% endfor %}
 
 <script src="/public/javascripts/application.js"></script>
+<script>
+function validateForm(form, field) {
+  var x = document.forms[form][field].value;
+  if (x == "") {
+    document.getElementById('errorSummary').style.display = 'block';
+     document.getElementById('errorSummary').innerHTML = "Please enter a value.";
+
+    return false;
+  }
+  if (x > 100 || x < 0) {
+    document.getElementById('errorSummary').style.display = 'block';
+    document.getElementById('errorSummary').innerHTML = "Value must be between 0% and 100%.";
+    document.forms[form][field].style.border = '2px solid red';
+    return false;
+  }
+}
+</script>
 
 {% if useAutoStoreData %}
   <script src="/public/javascripts/auto-store-data.js"></script>
