--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -22,7 +22,10 @@
 </div>
 {% endblock %}
 {% block content %}
-<form action="/cases/pricing" method="post" class="form">
+<form action="/cases/pricing" method="post" name='loss-given-default-form' id='loss-given-default-form' class="form" onsubmit="return validateForm('loss-given-default-form','loss-given-default')">
+<div tabindex="-1" role="group" id="errorSummary" name="errorSummary" class="govuk-error-summary moj-hidden" aria-labelledby="error-summary-title" data-module="error-summary">
+sdfsdfsfsdf
+</div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <div class="govuk-form-group tfm">
