--- a/app/views/inbox/create_case.html
+++ b/app/views/inbox/create_case.html
@@ -1,23 +1,23 @@
 {% extends "layout_navbar.html" %}
 {% set primary = 'inbox' %}
 {% block content %}
-<div class="govuk-grid-row tfm">
-  <div class="govuk-grid-column-full">
+<div class="govuk-grid-row tfm create-case">
+  <div class="govuk-grid-column-full ">
     <p class="header-label">Create a case</p>
     <p>Confirm you want to create a new case for the following manual inclusion application.</p>
 
-    <table  class="govuk-table tfm tfm-width" >
+    <table  class="govuk-table tfm-width " >
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell"></td>
-            <td class="govuk-table__cell"></td>
-            <td class="govuk-table__cell"></td>
-            <td class="govuk-table__cell"></td>
-            <td class="govuk-table__cell"></td>
-            <td class="govuk-table__cell"></td>
+            <th class="govuk-table__cell">Application ID</th>
+            <th class="govuk-table__cell">Exporter</th>
+            <th class="govuk-table__cell">Buyer</th>
+            <th class="govuk-table__cell">Industry sector</th>
+            <th class="govuk-table__cell">Bank</th>
+            <th class="govuk-table__cell">Date received</th>
         </tr>
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell">0020010552</td>
+            <td class="govuk-table__cell"><a href="#">0020010552</a></td>
             <td class="govuk-table__cell">Love to Learn Ltd</td>
             <td class="govuk-table__cell">Kingdom of Wakanda Colleg...</td>
             <td class="govuk-table__cell">Education</td>
