--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -428,6 +428,10 @@
   margin: 0 30px;
 }
 
+.create-case table, .create-case a {
+  font-size: 16px;
+}
+
 svg > g > g:last-child { pointer-events: none }
 </style>
 
