--- a/app/views/cases/pricing/interest-margin.html
+++ b/app/views/cases/pricing/interest-margin.html
@@ -2,22 +2,22 @@
 {% block beforeContent %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-{{ govukBreadcrumbs({
-  items: [
-    {
-      text: "C0345",
-      href: "/cases/tasks"
-    },
-    {
-      text: "pricing",
-      href: "/cases/Pricing"
-    },
-    {
-      text: "Interest margin"
-    }
-  ]
-}) }}
-</div>
+  {{ govukBreadcrumbs({
+    items: [
+      {
+        text: "C0345",
+        href: "/cases/tasks"
+      },
+      {
+        text: "pricing",
+        href: "/cases/Pricing"
+      },
+      {
+        text: "Interest margin"
+      }
+    ]
+  }) }}
+  </div>
 </div>
 {% endblock %}
 {% block content %}
@@ -29,24 +29,38 @@
 
 
 <form name="interest-margin-form" method="post" action="/cases/pricing" onsubmit="return validateForm('interest-margin-form','interest-margin-amount')" class="form">
-<div tabindex="-1" role="group" id="errorSummary" name="errorSummary" class="govuk-error-summary moj-hidden" aria-labelledby="error-summary-title" data-module="error-summary">
-sdfsdfsfsdf
-</div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <div class="govuk-form-group tfm">
+      <div class="govuk-error-summary moj-hidden" id="errorSummary" name="errorSummary"  aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <h2 class="govuk-error-summary__title" id="error-summary-title">
+          There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+          <span id="name-error" class="govuk-error-message">
+            <span>Error:</span> Values must be between 0% and 100%
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
             What interest margin is the bank charging?
           </h1>
         </legend>
-        <div class="flex-container" id="interest-margin-div">
-              <input class="govuk-input govuk-input--width-2" value="{{ data['interest-margin-amount'] }}" id="interest-margin-amount" name="interest-margin-amount" type="number" step="any" autocomplete="off" >
-              
-              <span class="percentage-field" id="interest-margin-percentage" name="interest-margin-percentage">%</span></input>
+        <div class="govuk-form-group tfm  " id="input-form" name="input-form">
+          <span class="govuk-error-message moj-hidden" id="errorMessage" name="errorMessage">
+            <span>Error:</span> Values must be between 0% and 100%
+          </span>
+          <div class="flex-container" id="input-field" name="input-field" style="width: fit-content;" id="interest-margin-div">
+            <input class="govuk-input govuk-input--width-2" value="{{ data['interest-margin-amount'] }}" id="interest-margin-amount" name="interest-margin-amount" type="number" step="any" autocomplete="off" >
+              <span class="percentage-field" id="interest-margin-percentage" name="interest-margin-percentage">%</span>
+            </input>
+          </div>
         </div>
-
-      </div> 
+      </div>
     </div>
   </div>
   <div class="govuk-grid-row tfm tfm-width">
