error message on loss given default.

--- a/app/views/cases/pricing/interest-margin.html
+++ b/app/views/cases/pricing/interest-margin.html
@@ -56,7 +56,7 @@
           </span>
           <div class="flex-container" id="input-field" name="input-field" style="width: fit-content;" id="interest-margin-div">
             <input class="govuk-input govuk-input--width-2" value="{{ data['interest-margin-amount'] }}" id="interest-margin-amount" name="interest-margin-amount" type="number" step="any" autocomplete="off" >
-              <span class="percentage-field" id="interest-margin-percentage" name="interest-margin-percentage">%</span>
+              <span class="percentage-field">%</span>
             </input>
           </div>
         </div>
@@ -65,7 +65,7 @@
   </div>
   <div class="govuk-grid-row tfm tfm-width">
     <div class="govuk-grid-column-one-quarter flex-container">
-      <button class="govuk-button" data-module="govuk-button" href="/cases/pricing">Save</button>
+      <button class="govuk-button" data-module="govuk-button">Save</button>
       <a href="/cases/pricing" class="cancel-link">Cancel</a>
     </div>
   </div>
