--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -22,22 +22,41 @@
 </div>
 {% endblock %}
 {% block content %}
+{%- from "govuk/components/input/macro.njk" import govukInput -%}
+{%- from "govuk/components/radios/macro.njk" import govukRadios -%}
+{%- from "govuk/components/date-input/macro.njk" import govukDateInput -%}
+{%- from "govuk/components/button/macro.njk" import govukButton -%}
 <form action="/cases/pricing" method="post" name='loss-given-default-form' id='loss-given-default-form' class="form" onsubmit="return validateForm('loss-given-default-form','loss-given-default')">
-<div tabindex="-1" role="group" id="errorSummary" name="errorSummary" class="govuk-error-summary moj-hidden" aria-labelledby="error-summary-title" data-module="error-summary">
-sdfsdfsfsdf
-</div>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
-      <div class="govuk-form-group tfm">
+      <div class="govuk-error-summary moj-hidden" id="errorSummary" name="errorSummary"  aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+        <h2 class="govuk-error-summary__title" id="error-summary-title">
+          There is a problem
+        </h2>
+        <div class="govuk-error-summary__body">
+          <span id="name-error" class="govuk-error-message">
+            <span>Error:</span> Values must be between 0% and 100%
+          </span>
+</div>
+      </div>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
           <h1 class="govuk-fieldset__heading">
             What is the loss given default?
           </h1>
         </legend>
-        <div class="flex-container">
-          <input class="govuk-input govuk-input--width-2" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="number" step="any" autocomplete="off" pattern="[0-9]*" >
-          </input>
+		<div class="govuk-form-group tfm  " id="input-form" name="input-form">
+          <span class="govuk-error-message moj-hidden" id="errorMessage" name="errorMessage">
+            <span>Error:</span> Values must be between 0% and 100%
+          </span>
+          <div class="flex-container" id="input-field" name="input-field" style="width: fit-content;" id="interest-margin-div">
+          <input class="govuk-input govuk-input--width-2" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="number" step="any" autocomplete="off" >
               <span class="percentage-field">%</span>
+          </input>
+          </div>
         </div>
       </div> 
     </div>
