Change error message

--- a/app/views/cases/pricing/loss-given-default.html
+++ b/app/views/cases/pricing/loss-given-default.html
@@ -35,7 +35,7 @@
         </h2>
         <div class="govuk-error-summary__body">
           <span id="name-error" class="govuk-error-message">
-            <span>Error:</span> Values must be between 0% and 100%
+            Enter a value between 0 and 100
           </span>
 </div>
       </div>
@@ -50,7 +50,7 @@
         </legend>
 		<div class="govuk-form-group tfm  " id="input-form" name="input-form">
           <span class="govuk-error-message moj-hidden" id="errorMessage" name="errorMessage">
-            <span>Error:</span> Values must be between 0% and 100%
+            Enter a value between 0 and 100
           </span>
           <div class="flex-container" id="input-field" name="input-field" style="width: fit-content;" id="interest-margin-div">
           <input class="govuk-input govuk-input--width-2" value="{{ data['loss-given-default'] }}" id="loss-given-default" name="loss-given-default" type="number" step="any" autocomplete="off" >
